--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r preprocessing/requirements.txt
 
     - name: Run preprocessing script
       run: python preprocessing/automate_Rivaldo.py
